<resources>
    <string name="app_name">Tanify</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forum">Forum</string>
    <string name="profile">Profile</string>
    <string name="slogan_register">Daftar akun Tanify mu sekarang!</string>
    <string name="masukkan_nama_register">Masukkan Nama*</string>
    <string name="masukan_konfirmasi_password">Konfirmasi Password*</string>
    <string name="hint_nama_lengkap">Masukan nama(nama lengkap)</string>
    <string name="hint_register_email">Masukkan email</string>
    <string name="masukkan_email">Masukkan Email*</string>
    <string name="hint_password_register">Masukkan password</string>
    <string name="password_register">Password*</string>
    <string name="hint_register_confirm_password">Ketik ulang password</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_register">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="login">Login</string>
    <string name="slogan_login">Silahkan masukkan sesuai akun anda</string>
    <string name="masukkan_email_login">Masukkan Email Anda</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_password_login">Masukkan Password Anda</string>
    <string name="lupa_kata_sandi">lupa kata sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="atau">atau</string>
    <string name="masuk_google_login">Masuk dengan Google</string>
    <string name="daftar_login">Daftar</string>
    <string name="latitude_0">latitude = 0</string>
    <string name="longitude_0">longitude = 0</string>
    <string name="logout">Logout</string>
    <string name="_0">0</string>
    <string name="_21_c">21°C</string>
    <string name="bandung">Bandung</string>
    <string name="hujan_gerimis">Hujan Gerimis</string>
    <string name="lorem_ipsum1">Lorem ipsum asnos sabo insam masnus kasman</string>
    <string name="title_lms">LMS</string>
    <string name="cerah_berawan">Cerah Berawan</string>
    <string name="hello">Hello,</string>
    <string name="azizah">Azizah</string>
    <string name="fitur_utama">Fitur Utama</string>
    <string name="artikel_pilihan">Artikel Pilihan</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="batalkan">Batalkan</string>
    <string name="simpan">Simpan</string>
    <string name="email">Email</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="ubah_foto_profil">Ubah foto profil</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="muktashim_billah">Muktashim Billah</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="cuaca">Cuaca Hari Ini</string>
    <string name="jakut">Jakarta Utara</string>
    <string name="tanggal">26 Agustus 2022</string>
    <string name="derajat">30 C</string>
    <string name="waterdrop">70%</string>
    <string name="jarak">5 KM/J</string>
    <string name="perkiraan_cuaca_5_hari_kedepan">Perkiraan Cuaca 5 Hari Kedepan</string>
    <string name="berkabut">Berkabut</string>
    <string name="sabtu">Sabtu</string>
    <string name="cerah_panas">Cerah Panas</string>
    <string name="hujan_badai">Hujan Badai</string>
    <string name="minggu">Minggu</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="lorem_100">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget leo nec ex ullamcorper ullamcorper. Duis vel dapibus nulla. Quisque nec augue in justo varius ultricies. In nec posuere felis. Curabitur et sem euismod, cursus lacus nec, dapibus lacus. Vivamus suscipit justo vitae leo tristique, in consectetur dui cursus. Maecenas in justo sit amet purus auctor bibendum. Sed condimentum turpis ut dolor lobortis, in volutpat sem tincidunt. Nulla facilisi. Integer in libero nec justo blandit vehicula. Sed ac sem nec leo venenatis ultricies vel at est. Vivamus aliquam euismod ex, in aliquam libero fermentum in. Sed euismod orci vitae orci laoreet, a hendrerit lacus hendrerit. Nunc vel ligula aliquet, aliquam nisi at, sagittis nisi. Sed vestibulum ante vel aliquet ultrices. Curabitur in eros at tellus consequat dictum. dolor sit amet, consectetur adipiscing elit. Nullam eget leo nec ex ullamcorper ullamcorper. Duis vel dapibus nulla. Quisque nec augue in justo varius ultricies. In nec posuere felis. Curabitur et sem euismod, cursus lacus nec, dapibus lacus. Vivamus suscipit justo vitae leo tristique, in consectetur dui cursus. Maecenas in justo sit amet purus auctor bibendum. Sed condimentum turpis ut dolor lobortis, in volutpat sem tincidunt. Nulla facilisi. Integer in libero nec justo blandit vehicula. Sed ac sem nec leo venenatis ultricies vel at est. Vivamus aliquam euismod ex, in aliquam libero fermentum in. Sed euismod orci vitae orci laoreet, a hendrerit lacus hendrerit. Nunc vel ligula aliquet, aliquam nisi at, sagittis nisi. Sed vestibulum ante vel aliquet ultrices. Curabitur in eros at tellus consequat dictum. consectetur adipiscing elit. Nullam eget leo nec ex ullamcorper ullamcorper. Duis vel dapibus nulla. Quisque nec augue in justo varius ultricies. In nec posuere felis. Curabitur et sem euismod, cursus lacus nec, dapibus lacus. Vivamus suscipit justo vitae leo tristique, in consectetur dui cursus. Maecenas in justo sit amet purus auctor bibendum. Sed condimentum turpis ut dolor lobortis, in volutpat sem tincidunt. Nulla facilisi. Integer in libero nec justo blandit vehicula. Sed ac sem nec leo venenatis ultricies vel at est. Vivamus aliquam euismod ex, in aliquam libero fermentum in. Sed euismod orci vitae orci laoreet, a hendrerit lacus hendrerit. Nunc vel ligula aliquet, aliquam nisi at, sagittis nisi. Sed vestibulum ante vel aliquet ultrices. Curabitur in eros at tellus consequat dictum. dolor sit amet, consectetur adipiscing elit. Nullam eget leo nec ex ullamcorper ullamcorper. Duis vel dapibus nulla. Quisque nec augue in justo varius ultricies. In nec posuere felis. Curabitur et sem euismod, cursus lacus nec, dapibus lacus. Vivamus suscipit justo vitae leo tristique, in consectetur dui cursus. Maecenas in justo sit amet purus auctor bibendum. Sed condimentum turpis ut dolor lobortis, in volutpat sem tincidunt. Nulla facilisi. Integer in libero nec justo blandit vehicula. Sed ac sem nec leo venenatis ultricies vel at est. Vivamus aliquam euismod ex, in aliquam libero fermentum in. Sed euismod orci vitae orci laoreet, a hendrerit lacus hendrerit. Nunc vel ligula aliquet, aliquam nisi at, sagittis nisi. Sed vestibulum ante vel aliquet ultrices. Curabitur in eros at tellus consequat dictum.</string>
    <string name="example_artikel_title">Optimalkan Pertumbuhan Padi dengan 5 Tips Efektif</string>
    <string name="oleh_wilson">Oleh Wilson</string>
    <string name="_31_oktober_2023">31 Oktober 2023</string>
    <string name="contoh_konten_artikel">Untuk mengoptimalkan pertumbuhan padi, berikut adalah beberapa tips yang dapat membantu:

Pilih varietas padi yang cocok
Pastikan Anda memilih varietas padi yang sesuai dengan kondisi iklim, tanah, dan lingkungan tempat Anda bertani. Konsultasikan dengan pakar pertanian atau petani lokal untuk mendapatkan rekomendasi varietas yang tepat.

Persiapan lahan yang baik
Lakukan persiapan lahan dengan benar sebelum menanam padi. Bersihkan gulma dan sisa-sisa tanaman sebelumnya, lakukan pengolahan tanah yang cukup, dan pastikan drainase yang baik untuk menghindari genangan air.

Pemupukan yang tepat
Berikan pemupukan yang sesuai dengan kebutuhan padi. Analisis tanah dapat membantu Anda menentukan jenis dan jumlah pupuk yang dibutuhkan. Pemupukan yang tepat akan membantu pertumbuhan dan perkembangan tanaman secara optimal.</string>
    <string name="survey_petani">Survey petani</string>
    <string name="hallo_nadhifa">Hallo, Nadhifa</string>
    <string name="belajar_yuk">Belajar yuk!</string>
    <string name="mau_belajar_apa">Mau belajar apa?</string>
    <string name="recomended_lessons">Recomended Lessons</string>
    <string name="your_lessons">Your Lessons</string>
    <string name="dasar_dasar_pertanian_padi">Dasar-Dasar Pertanian Padi</string>
    <string name="_6_section">6 section</string>
    <string name="pengelolaan_tanah_dan_air">Pengelolaan Tanah dan Air</string>
    <string name="_3_section">3 section</string>
    <string name="_10">10%</string>
    <string name="artikel">Artikel</string>
    <string name="optimalkan_pertumbuhan_padi_dengan_5_tips_efektif">Optimalkan Pertumbuhan Padi dengan 5 Tips Efektif</string>
    <string name="optimalkan_pertumbuhan_padi_secara_efektif_dengan_beberapa_tips_yang_sudah_diberikan">Optimalkan pertumbuhan padi secara efektif dengan beberapa tips yang sudah diberikan</string>
    <string name="nama">wilson</string>
    <string name="_1_pengenalan_siklus_hidup_tanaman_padi">1. Pengenalan siklus hidup tanaman padi</string>
    <string name="menambahkan_forum_diskusi">menambahkan forum diskusi</string>
    <string name="bg_card">bg_card</string>
    <string name="saya_ingin_membandingkan_harga_di_pulau_jawa_dan_juga_di_luar_pulau_jawa">Saya ingin membandingkan harga di pulau jawa dan juga di luar pulau jawa</string>
    <string name="kisaran_harga_padi_di_pulau_jawa">Kisaran harga padi di pulau jawa</string>
    <string name="komentar">Komentar</string>
    <string name="ronald_richeees">Ronald RIcheees</string>
    <string name="suka">Suka</string>
    <string name="bagikan">Bagikan</string>
    <string name="ketik_komentar_di_sini">Ketik komentar di sini</string>
    <string name="adrian_ronaldy">Adrian Ronaldy</string>
    <string name="_1_jam_yang_lalu">1 jam yang lalu</string>
    <string name="sepertinya_12_000_kak">Sepertinya 12.000 kak</string>
    <string name="btn_mengirim_komentar">btn mengirim komentar</string>
    <string name="buat_diskusi">Buat Diskusi</string>
    <string name="publik">Publik</string>
    <string name="post">Post</string>
    <string name="tambah_judul">Tambah Judul</string>
    <string name="tambahkan_judul_anda">Tambahkan judul anda</string>
    <string name="tambahkan_informasi_anda">Tambahkan informasi anda</string>
    <string name="tambah_informasi">Tambah Informasi</string>
    <string name="cari_diskusi">Cari diskusi</string>
    <string name="btn_search">button search</string>
    <string name="a">A</string>
    <string name="profil">Profil</string>
</resources>