<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_tanify"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan_login"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/primary_green"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_email"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/TextInputLayoutStyle">

        <EditText
            android:id="@+id/ed_register_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/masukkan_email_login"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_password"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle"
        style="@style/TextInputLayoutStyle">

        <com.example.tanify.custom.CustomEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:textSize="12sp"
            android:paddingLeft="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/masukkan_password_login"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLupaSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_kata_sandi"
        android:layout_gravity="right"
        android:paddingTop="10dp"/>

    <com.example.tanify.custom.CustomButtonFillGreen
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        android:text="@string/masuk"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        >

        <View
            android:id="@+id/vGaris"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAtau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/atau"
            app:layout_constraintBottom_toBottomOf="@id/vGaris"
            app:layout_constraintStart_toEndOf="@id/vGaris"
            app:layout_constraintTop_toTopOf="@id/vGaris" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.tanify.custom.CustomButtonFillYellow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        android:text="@string/daftar"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"/>
</LinearLayout>