<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="220dp"
            android:layout_height="94dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/logo_tanofy_svg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan_register"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_green"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/masukkan_nama_register"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/ed_register_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/hint_nama_lengkap"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/masukkan_email"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/hint_register_email"
                tools:layout_editor_absoluteX="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/password_register"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            style="@style/TextInputLayoutStyle">

            <com.example.tanify.custom.CustomEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/hint_password_register"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/masukkan_nama_register"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            style="@style/TextInputLayoutStyle">

            <com.example.tanify.custom.CustomEditText
                android:id="@+id/ed_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"
                android:hint="@string/hint_register_confirm_password"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.example.tanify.custom.CustomButtonFillGreen
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:layout_marginTop="32dp"
            android:textAllCaps="false"
            android:text="@string/daftar_register"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/sudah_punya_akun"/>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/primary_green"
                android:text="@string/login"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>