<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/posterBackground"
        android:layout_width="95dp"
        android:layout_height="103dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_listartikel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/foto_list_artikel"/>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <TextView
        android:id="@+id/tv_namapembuat_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/posterBackground"
        app:layout_constraintTop_toTopOf="@+id/posterBackground" />

    <TextView
        android:id="@+id/tv_tanggal_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_namapembuat_artikel"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_judul_artikel"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/poppins_semibold"
        android:maxLines="2"
        android:text="@string/optimalkan_pertumbuhan_padi_dengan_5_tips_efektif"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_namapembuat_artikel"
        app:layout_constraintTop_toBottomOf="@+id/tv_namapembuat_artikel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/deskripsi_list_artikel"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_artikel"
        app:layout_constraintLeft_toLeftOf="@+id/tv_judul_artikel"
        android:text="@string/optimalkan_pertumbuhan_padi_secara_efektif_dengan_beberapa_tips_yang_sudah_diberikan"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:maxLines="2"
        tools:ignore="SmallSp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/posterBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="11dp"
        android:background="@android:color/darker_gray"/>


</androidx.constraintlayout.widget.ConstraintLayout>