<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="3dp"
    android:layout_marginBottom="8dp"
    android:clipChildren="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cardview">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:src="@drawable/foto_profile"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adrian_ronaldy"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile"/>
        
        <TextView
            android:id="@+id/tv_waktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            android:text="@string/_1_jam_yang_lalu"
            tools:ignore="SmallSp" />
        
        <TextView
            android:id="@+id/tv_comment_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sepertinya_12_000_kak"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_comment_message"/>

        <LinearLayout
            android:id="@+id/bnt_like_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/view">

            <ImageView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:src="@drawable/button_forum_heart"
                android:layout_marginVertical="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="11dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/suka"
                android:textSize="12sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.cardview.widget.CardView>